--- a/website/src/privacy.html
+++ b/website/src/privacy.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Privacy Policy for DuckBake - Local Data Analysis with SQL & AI" />
     <link rel="icon" type="image/png" href="./duckbake.png" />
     <script type="module" src="./legal.tsx" async></script>
+    <script defer src="https://umami.limehosting.com/script.js" data-website-id="c8321f80-07c1-4dbd-aad0-9fd37c70f4bf"></script>
   </head>
   <body>
     <div id="root"></div>
