--- a/website/src/index.html
+++ b/website/src/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="DuckBake, SQL, AI, data analysis, Mac app, local data, DuckDB, privacy" />
     <link rel="icon" type="image/png" href="./duckbake.png" />
     <script type="module" src="./frontend.tsx" async></script>
+    <script defer src="https://umami.limehosting.com/script.js" data-website-id="c8321f80-07c1-4dbd-aad0-9fd37c70f4bf"></script>
   </head>
   <body>
     <div id="root"></div>
