adding og-image and seo to website

--- a/website/src/index.html
+++ b/website/src/index.html
@@ -5,8 +5,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DuckBake - Local Data Analysis with SQL & AI</title>
     <meta name="description" content="DuckBake is a free Mac app powered by DuckDB to store and analyze data locally with SQL and AI conversation. Your data stays on your device." />
-    <meta name="keywords" content="DuckBake, SQL, AI, data analysis, Mac app, local data, DuckDB, privacy" />
+    <meta name="keywords" content="DuckBake, SQL, AI, data analysis, Mac app, local data, DuckDB, privacy, database, analytics" />
+    <meta name="author" content="DuckBake" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://duckbake.com/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://duckbake.com/" />
+    <meta property="og:title" content="DuckBake - Local Data Analysis with SQL & AI" />
+    <meta property="og:description" content="DuckBake is a free Mac app powered by DuckDB to store and analyze data locally with SQL and AI conversation. Your data stays on your device." />
+    <meta property="og:image" content="https://duckbake.com/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="DuckBake" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://duckbake.com/" />
+    <meta name="twitter:title" content="DuckBake - Local Data Analysis with SQL & AI" />
+    <meta name="twitter:description" content="DuckBake is a free Mac app powered by DuckDB to store and analyze data locally with SQL and AI conversation. Your data stays on your device." />
+    <meta name="twitter:image" content="https://duckbake.com/og-image.png" />
+
+    <!-- Additional SEO -->
+    <meta name="theme-color" content="#0a0a0f" />
+    <meta name="apple-mobile-web-app-title" content="DuckBake" />
+    <meta name="application-name" content="DuckBake" />
+
     <link rel="icon" type="image/png" href="./duckbake.png" />
+    <link rel="apple-touch-icon" href="./duckbake-square.png" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "DuckBake",
+      "description": "DuckBake is a free Mac app powered by DuckDB to store and analyze data locally with SQL and AI conversation. Your data stays on your device.",
+      "applicationCategory": "DeveloperApplication",
+      "operatingSystem": "macOS",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "author": {
+        "@type": "Organization",
+        "name": "DuckBake"
+      },
+      "softwareVersion": "0.0.6",
+      "featureList": [
+        "Local data analysis",
+        "SQL queries powered by DuckDB",
+        "AI-powered data conversations",
+        "Privacy-first design",
+        "Multiple data source support"
+      ],
+      "screenshot": "https://duckbake.com/screenshots/home.png",
+      "url": "https://duckbake.com"
+    }
+    </script>
+
     <script type="module" src="./frontend.tsx" async></script>
     <script defer src="https://umami.limehosting.com/script.js" data-website-id="c8321f80-07c1-4dbd-aad0-9fd37c70f4bf"></script>
   </head>
