--- a/website/src/terms.html
+++ b/website/src/terms.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Terms of Service - DuckBake</title>
-    <meta name="description" content="Terms of Service for DuckBake - Local Data Analysis with SQL & AI" />
+    <meta name="description" content="Terms of Service for DuckBake. Read our terms and conditions for using DuckBake, the free local data analysis app with SQL and AI." />
+    <meta name="keywords" content="DuckBake, terms of service, terms and conditions, legal" />
+    <meta name="author" content="DuckBake" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://duckbake.com/terms" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://duckbake.com/terms" />
+    <meta property="og:title" content="Terms of Service - DuckBake" />
+    <meta property="og:description" content="Terms of Service for DuckBake. Read our terms and conditions for using DuckBake, the free local data analysis app." />
+    <meta property="og:image" content="https://duckbake.com/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="DuckBake" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://duckbake.com/terms" />
+    <meta name="twitter:title" content="Terms of Service - DuckBake" />
+    <meta name="twitter:description" content="Terms of Service for DuckBake. Read our terms and conditions for using DuckBake, the free local data analysis app." />
+    <meta name="twitter:image" content="https://duckbake.com/og-image.png" />
+
+    <!-- Additional SEO -->
+    <meta name="theme-color" content="#0a0a0f" />
+
     <link rel="icon" type="image/png" href="./duckbake.png" />
+    <link rel="apple-touch-icon" href="./duckbake-square.png" />
+
     <script type="module" src="./legal.tsx" async></script>
     <script defer src="https://umami.limehosting.com/script.js" data-website-id="c8321f80-07c1-4dbd-aad0-9fd37c70f4bf"></script>
   </head>
