icons and og-image update

--- a/website/src/index.html
+++ b/website/src/index.html
@@ -33,8 +33,14 @@
     <meta name="apple-mobile-web-app-title" content="DuckBake" />
     <meta name="application-name" content="DuckBake" />
 
-    <link rel="icon" type="image/png" href="./duckbake.png" />
-    <link rel="apple-touch-icon" href="./duckbake-square.png" />
+    <!-- Favicons -->
+    <link rel="icon" href="./favicon.ico" sizes="32x32" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="./favicon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="./favicon-512x512.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon-180x180.png" />
+    <link rel="manifest" href="./site.webmanifest" />
 
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -62,7 +68,7 @@
         "Privacy-first design",
         "Multiple data source support"
       ],
-      "screenshot": "https://duckbake.com/screenshots/home.png",
+      "screenshot": "https://duckbake.com/og-image.png",
       "url": "https://duckbake.com"
     }
     </script>
