--- a/website/src/privacy.html
+++ b/website/src/privacy.html
@@ -30,8 +30,14 @@
     <!-- Additional SEO -->
     <meta name="theme-color" content="#0a0a0f" />
 
-    <link rel="icon" type="image/png" href="./duckbake.png" />
-    <link rel="apple-touch-icon" href="./duckbake-square.png" />
+    <!-- Favicons -->
+    <link rel="icon" href="./favicon.ico" sizes="32x32" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="./favicon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="./favicon-512x512.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon-180x180.png" />
+    <link rel="manifest" href="./site.webmanifest" />
 
     <script type="module" src="./legal.tsx" async></script>
     <script defer src="https://umami.limehosting.com/script.js" data-website-id="c8321f80-07c1-4dbd-aad0-9fd37c70f4bf"></script>
