--- a/website/src/index.html
+++ b/website/src/index.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="https://duckbake.com/" />
     <meta property="og:title" content="DuckBake - Local Data Analysis with SQL & AI" />
     <meta property="og:description" content="DuckBake is a free Mac app powered by DuckDB to store and analyze data locally with SQL and AI conversation. Your data stays on your device." />
-    <meta property="og:image" content="https://duckbake.com/og-image.png" />
+    <meta property="og:image" content="https://duckbake.com/og-image.png?v=2" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="DuckBake" />
