og-image bump for twtitter and some scripts for appstore build

--- a/website/src/index.html
+++ b/website/src/index.html
@@ -26,7 +26,7 @@
     <meta name="twitter:url" content="https://duckbake.com/" />
     <meta name="twitter:title" content="DuckBake - Local Data Analysis with SQL & AI" />
     <meta name="twitter:description" content="DuckBake is a free Mac app powered by DuckDB to store and analyze data locally with SQL and AI conversation. Your data stays on your device." />
-    <meta name="twitter:image" content="https://duckbake.com/og-image.png" />
+    <meta name="twitter:image" content="https://duckbake.com/og-image.png?v=2" />
 
     <!-- Additional SEO -->
     <meta name="theme-color" content="#0a0a0f" />
