og-image refresh

--- a/website/src/privacy.html
+++ b/website/src/privacy.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="https://duckbake.com/privacy" />
     <meta property="og:title" content="Privacy Policy - DuckBake" />
     <meta property="og:description" content="Privacy Policy for DuckBake. Learn how we protect your data. DuckBake processes all data locally on your device." />
-    <meta property="og:image" content="https://duckbake.com/og-image.png" />
+    <meta property="og:image" content="https://duckbake.com/og-image-v2.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="DuckBake" />
@@ -25,7 +25,7 @@
     <meta name="twitter:url" content="https://duckbake.com/privacy" />
     <meta name="twitter:title" content="Privacy Policy - DuckBake" />
     <meta name="twitter:description" content="Privacy Policy for DuckBake. Learn how we protect your data. DuckBake processes all data locally on your device." />
-    <meta name="twitter:image" content="https://duckbake.com/og-image.png" />
+    <meta name="twitter:image" content="https://duckbake.com/og-image-v2.png" />
 
     <!-- Additional SEO -->
     <meta name="theme-color" content="#0a0a0f" />
