--- a/website/src/terms.html
+++ b/website/src/terms.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="https://duckbake.com/terms" />
     <meta property="og:title" content="Terms of Service - DuckBake" />
     <meta property="og:description" content="Terms of Service for DuckBake. Read our terms and conditions for using DuckBake, the free local data analysis app." />
-    <meta property="og:image" content="https://duckbake.com/og-image.png" />
+    <meta property="og:image" content="https://duckbake.com/og-image-v2.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="DuckBake" />
@@ -25,7 +25,7 @@
     <meta name="twitter:url" content="https://duckbake.com/terms" />
     <meta name="twitter:title" content="Terms of Service - DuckBake" />
     <meta name="twitter:description" content="Terms of Service for DuckBake. Read our terms and conditions for using DuckBake, the free local data analysis app." />
-    <meta name="twitter:image" content="https://duckbake.com/og-image.png" />
+    <meta name="twitter:image" content="https://duckbake.com/og-image-v2.png" />
 
     <!-- Additional SEO -->
     <meta name="theme-color" content="#0a0a0f" />
